--- a/index.html
+++ b/index.html
@@ -68,7 +68,25 @@
                 <p>08. Outra Vida</p>
             </div>
         </div>
-
+         <div onclick="texto9()" class="image9 wrap wrap--1">
+            <div class="container container--1">
+                <p>09. Surtos</p>
+            </div>
+        </div>
+        <div onclick="texto10()" class="image10 wrap wrap--1">
+            <div class="container container--1">
+                <p>10. Última oração</p>
+            </div>
+        </div>
+        <div onclick="texto11()" class="image11 wrap wrap--1">
+            <div class="container container--1">
+                <p>11. Viagens</p>
+            </div>
+        </div>
+        <div onclick="texto12()" class="image12 wrap wrap--1">
+            <div class="container container--1">
+                <p>12. Força</p>
+            </div>
     </section>
     <footer>Criado por Otávio Leomar Angelin Zwirtes | Todos os direitos reservados 2023</footer>
 </body>
